--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 <body>
 
+  <!-- <div class="doc-loader">
+    <img src="images/preloader.gif" alt="Seppo">
+  </div> -->
+
+
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky" style="background-color: black; ">
     <div class="container-fluid px-4 ">
@@ -113,14 +118,14 @@
     <div class="container  px-md-5 px-3  ">
       <div class="row row-div py-5  ">
         <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0   ">
-          <p class="pb-3" >
+          <p class="pb-3">
             WO WE ARE
             </h1>
           <h2 class="pb-4">
             Live up to
             your creative potential.
           </h2>
-          <p class="pb-3 px-md-0 px-2" >
+          <p class="pb-3 px-md-0 px-2">
             Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga
             inconspicuous
             motespatch clean designed code and energy matter.
@@ -162,7 +167,7 @@
                         doloremque
                         praesentium odit beatae velit?
                       </p>
-                      <p ><span>
+                      <p><span>
                           <img src="/images/quote_image_02.jpg" alt="" class="rounded-pill">
 
                           &nbsp;&nbsp;peter Hall &nbsp;&nbsp;
@@ -209,7 +214,7 @@
                         temporibus perspiciatis dolore molestiae voluptatum unde,
                         perspiciatis dolore molestiae voluptatum unde, voluptate esse atque?
                       </p>
-                      <p ><span>
+                      <p><span>
                           <img src="/images/quote_image_04.jpg" alt="" class="rounded-pill">
 
                           &nbsp;&nbsp;john smith &nbsp;&nbsp;
@@ -349,54 +354,6 @@
     </div>
   </div>
 
-  <!-- PRICING -->
-  <div class="container-fluid " id="PORTFOLIO" style="position: relative; background-color: white; ">
-    <div class="page-title-holder">
-      <h4 class="text-center p-md-5 p-5" style="color: white;">
-        PRICING
-      </h4>
-    </div>
-    <div class="row   ">
-      <div class="col-md-3 col-12 px-0    ">
-        <div class="portfolio-Hover">
-          <img src="/images/portfolio_item_01.jpg" alt="">
-          <div class="layer">
-            <p>INTERIOR</p>
-            <h3>Living Room</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-6 col-12 px-0    ">
-        <div class="portfolio-Hover">
-          <img src="/images/portfolio_item_02.jpg" alt="">
-          <div class="layer">
-            <p class='py-md-0 py-3'>FASHION</p>
-            <h3>Modeling</h3>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-12 px-0     ">
-        <div class="portfolio-Hover">
-          <img src="/images/portfolio_item_03.jpg" alt="">
-          <div class="layer">
-            <p class="py-3">CREATIVE</p>
-            <h3>Psd Mockup</h3>
-          </div>
-        </div>
-        <div class="portfolio-Hover">
-          <img src="/images/portfolio_item_04.jpg" alt="">
-          <div class="layer">
-            <p class="py-3">ARCHITECTURE</p>
-            <h3>Pillars</h3>
-          </div>
-        </div>
-
-      </div>
-
-
-
-    </div>
-  </div>
 
 
   <!--TEAM -->
@@ -409,51 +366,53 @@
     <div class="container px-md-5 px-3 bg-info">
 
       <div class="row ">
-        <div class="col-md-6 col-12 px-0 bg-success ">
+        <div class="col-md-6 col-12 px-0 bg-success pt-md-0 pt-5 About-img">
 
-          <img src="/images/about_item_01.jpg" alt="" width="100%">
+          <img src="/images/about_item_01.jpg" alt="" width="90%">
 
         </div>
         <div class="col-md-6 col-12 px-0 bg-success ">
 
-          <div class="member-info w-100 ">
+          <div class="member-info w-100 text-md-start text-center p-lg-5 p-md-0 p-3">
+            <div class="p-4 ">
 
-            <p>CEO</p>
-            <h3>Marty Stone</h3>
-            <p>Code the energy hidden in matter citizens of distant epochs sun. Citizens of distant epochs encyclopaedia
-              galant
-              ctica
-              the ash of stellar alchemy Vangelis white dwarf adipisci velit. Nemo enim ipsam volupta tem quia voluptas
-              sit
-              aspernatur
-              aut odit aut fugit radio telescope quis nostrum exercitatio nem ullam corporis suscipit laboriosam quis.
-            </p>
+              <p>CEO</p>
+              <h3>Marty Stone</h3>
+              <p class="py-md-0 py-3">Code the energy hidden in matter citizens of distant epochs sun. Citizens of
+                distant epochs encyclopaedia
+                galant
+                ctica
+                the ash of stellar alchemy Vangelis white dwarf adipisci velit. Nemo enim ipsam volupta tem quia
+                voluptas
+                sit
+                aspernatur
+                aut odit aut fugit radio telescope quis nostrum exercitatio nem ullam corporis suscipit laboriosam quis.
+              </p>
+            </div>
 
           </div>
-          <div class="col-md-6 col-12 px-0 bg-success ">
+          <div class="col-lg-6 col-md-10 col-12 px-0 bg-success ">
 
             <div class="member-Social w-100">
 
-              <div class="Social ">
 
-                <a href="#" target="_blank">
-                  <span class="fa fa-facebook px-2"></span>
-                </a>
-                <a href="#" target="_blank">
-                  <span class="fa fa-twitter px-2"></span>
-                </a>
-                <a href="#" target="_blank">
-                  <span class="fa fa-instagram px-2"></span>
-                </a>
-                <a href="#" target="_blank">
-                  <span class="fa fa-vimeo px-2"></span>
-                </a>
-                <a href="#" target="_blank">
-                  <span class="fa fa-behance px-2"></span>
-                </a>
-              </div>
-
+              <a href="#" target="_blank">
+                <span class="fa fa-facebook px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-twitter px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-instagram px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-vimeo px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-behance px-2"></span>
+              </a>
             </div>
+
 
           </div>
         </div>
@@ -462,26 +421,334 @@
 
 
       </div>
-      
+
+      <div class="row ">
+        <div class="col-md-6 col-12 px-0 bg-success About-img">
+
+          <img src="/images/about_item_02.jpg" alt="" width="90%">
+
+        </div>
+        <div class="col-md-6 col-12 px-0 bg-success ">
+
+          <div class="member-info w-100 text-md-start text-center p-lg-5 p-md-0 p-3">
+            <div class="p-4 ">
+
+              <p>DESIGNER</p>
+              <h3>John Williams</h3>
+              <p class="py-md-0 py-3 ">Code the energy hidden in matter citizens of distant epochs sun. Citizens of
+                distant epochs encyclopaedia galant ctica
+                the ash of stellar alchemy Vangelis white dwarf adipisci velit. Nemo enim ipsam volupta tem quia
+                voluptas
+                sit aspernatur
+                aut odit aut fugit radio telescope quis nostrum exercitatio nem ullam corporis suscipit laboriosam quis.
+              </p>
+            </div>
+
+          </div>
+          <div class="col-md-6 col-12 px-0 bg-success ">
+
+            <div class="member-Social w-100">
+
+
+              <a href="#" target="_blank">
+                <span class="fa fa-facebook px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-twitter px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-instagram px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-vimeo px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-behance px-2"></span>
+              </a>
+            </div>
+
+
+          </div>
+        </div>
+
+
+
+
+      </div>
+
+      <div class="row ">
+        <div class="col-md-6 col-12 px-0 bg-success About-img">
+
+          <img src="/images/about_item_03.jpg" alt="" width="90%">
+
+        </div>
+        <div class="col-md-6 col-12 px-0 bg-success ">
+
+          <div class="member-info w-100 text-md-start text-center p-lg-5 p-md-0 p-3">
+            <div class="p-4 ">
+
+              <p>DEVELOPER</p>
+              <h3>Vanessa Doe</h3>
+              <p class="py-md-0 py-3 ">Code the energy hidden in matter citizens of distant epochs sun. Citizens of
+                distant epochs encyclopaedia galant ctica
+                the ash of stellar alchemy Vangelis white dwarf adipisci velit. Nemo enim ipsam volupta tem quia
+                voluptas
+                sit aspernatur
+                aut odit aut fugit radio telescope quis nostrum exercitatio nem ullam corporis suscipit laboriosam quis.
+              </p>
+            </div>
+
+          </div>
+          <div class="col-md-6 col-12 px-0 bg-success ">
+
+            <div class="member-Social w-100">
+
+
+              <a href="#" target="_blank">
+                <span class="fa fa-facebook px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-twitter px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-instagram px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-vimeo px-2"></span>
+              </a>
+              <a href="#" target="_blank">
+                <span class="fa fa-behance px-2"></span>
+              </a>
+            </div>
+
+
+          </div>
+        </div>
+
+
+
+
+      </div>
+
+
     </div>
   </div>
 
 
 
 
+  <!-- SKILLS -->
+  <div class="container-fluid " id="ABOUT" style="position: relative; background-color: white; padding-top: 130px;">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        SKILLS
+      </h4>
+    </div>
+    <div class="container  px-md-5 px-3  ">
+      <div class="row row-div py-5  ">
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0   ">
+          <p class="pb-3">
+            OUR NUMBERS
+            </h1>
+          <h2 class="pb-4">
+            Check our <br>
+            Skills
+          </h2>
+          <p class="pb-3 px-md-0 px-2">
+            Code the energy hidden in matter citizens of distant epochs from which we spring drake equation perga
+            inconspicuous
+            motespatch clean designed code and energy matter.
+          </p>
+          <a class="btn rounded-pill" href="#"> LEARN MORE</a>
+        </div>
+        <div class="col-md-6 col-12 text-center px-md-3 px-0  ">
+          <div>
+            <div class="skills-holder bg-danger">
+
+              <div class="skill-holder bg-info py-4">
+                <div class="skill-percent pt-4">75%</div>
+                <div class="skill-text">
+                  <span>Creativity</span>
+                  <div class="skill">
+                    <div class="skill-fill" data-fill="75%"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-holder py-4">
+                <div class="skill-percent pt-4">45%</div>
+                <div class="skill-text">
+                  <span>Cooking</span>
+                  <div class="skill">
+                    <div class="skill-fill" data-fill="45%"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-holder py-4">
+                <div class="skill-percent pt-4">90%</div>
+                <div class="skill-text">
+                  <span>PhP</span>
+                  <div class="skill">
+                    <div class="skill-fill" data-fill="90%"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-holder py-4">
+                <div class="skill-percent pt-4">65%</div>
+                <div class="skill-text">
+                  <span>Marketing</span>
+                  <div class="skill">
+                    <div class="skill-fill" data-fill="65%"></div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="skill-holder py-4">
+                <div class="skill-percent pt-4">85%</div>
+                <div class="skill-text">
+                  <span>Design</span>
+                  <div class="skill">
+                    <div class="skill-fill" data-fill="85%"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
+  <!-- MILESTONES -->
+  <div class="container-fluid " id="ABOUT" style="position: relative; background-color: black; padding-top: 130px;">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        MILESTONES
+      </h4>
+    </div>
+    <div class="container  px-md-5 px-3  ">
+      <div class="row row-div py-5  ">
+
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+          <div class="d-md-flex ">
+            <div class="milestone-num pb-md-0 pb-3">
+              <h1>135</h1>
+            </div>
+            <div class="px-3">
+              <h3 class="text-white">Terabytes of files uploaded</h3>
+              <p class="pt-3">Nulla ac laoreet est, a mollis nibh. Aenean eget auctor velit quis pharetra.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+          <div class="d-md-flex ">
+            <div class="milestone-num pb-md-0 pb-3">
+              <h1>67K</h1>
+            </div>
+            <div class="px-3">
+              <h3 class="text-white">Lines of CSS code wrote</h3>
+              <p class="pt-3">Nulla ac laoreet est, a mollis nibh. Aenean eget auctor velit quis pharetra.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+          <div class="d-md-flex ">
+            <div class="milestone-num pb-md-0 pb-3">
+              <h1>74</h1>
+            </div>
+            <div class="px-3">
+              <h3 class="text-white">Cups of coffee drinked per week</h3>
+              <p class="pt-3">Nulla ac laoreet est, a mollis nibh. Aenean eget auctor velit quis pharetra.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+          <div class="d-md-flex ">
+            <div class="milestone-num pb-md-0 pb-3">
+              <h1>389</h1>
+            </div>
+            <div class="px-3">
+              <h3 class="text-white">Happy clients served this year</h3>
+              <p class="pt-3">Nulla ac laoreet est, a mollis nibh. Aenean eget auctor velit quis pharetra.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 
+  <!-- CONTACT -->
+  <div class="container-fluid " id="ABOUT" style="position: relative; background-color: white; padding-top: 130px;">
+    <div class="page-title-holder">
+      <h4 class="text-center p-md-5 p-5" style="color: white;">
+        CONTACT
+      </h4>
+    </div>
+    <div class="container  px-md-5 px-3  ">
+      <div class="row row-div py-5  ">
 
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0  bg-danger ">
+          <p class="pb-3">
+            CONTACT US
+            </h1>
+          <h2 class="pb-4">
+            Lets start
+            <br>
+            Working
+          </h2>
+          <p class="pb-3 px-md-0 px-2">
+            Because they are hard, because that goal will serve to organize and measure the best of our energies and
+            skills, because
+            that challenge is one that we are willing to accept one we are.
+          </p>
+          <a class="btn rounded-pill" href="#"> LEARN MORE</a>
+        </div>
+        <!-- CONTACT FORM  -->
 
+        <div class="col-md-6 col-12 text-center px-md-3 px-3 bg-info pt-3">
+          <div class="one_half last ">
+            <div class="contact-form">
+              <p>
+                <input id="name" type="text" name="your-name" placeholder="Name">
+              </p>
+              <p>
+                <input id="contact-email" type="email" name="your-email" placeholder="Email">
+              </p>
+              <p>
+                <input id="subject" type="text" name="your-subject" placeholder="Subject">
+              </p>
+              <p>
+                <textarea id="message" name="your-message" placeholder="Message"></textarea>
+              </p>
+              <div>
+                <input class="btn rounded-pill " type="submit" value="SEND" style="padding: 13px 35%;">
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- MAP -->
+        <div class="col-12 text-center bg-info py-5 px-md-0 px-3">
+          <div>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4274.290564544589!2d-75.2952832049782!3d40.753669641460846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srs!4v1444506658649"
+              width="95%" height="400px" allowfullscreen="allowfullscreen">
+            </iframe>
+          </div>
 
+        </div>
 
-
+      </div>
+    </div>
+  </div>
   <script src="js/jarallax.js"></script>
   <script src="js/jarallax-element.min.js"></script>
-
   <script src="/bootstrap.bundle.js"></script>
 </body>
 
