--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
   </div>
 
   <!-- PORTFOLIO -->
+
   <div class="container-fluid " id="PORTFOLIO" style="position: relative; background-color: white; ">
     <div class="page-title-holder">
       <h4 class="text-center p-md-5 p-5" style="color: white;">
@@ -336,19 +337,19 @@
         PRICING
       </h4>
     </div>
-    <div class="container px-md-5 px-4">
+    <div class="container px-md-5 px-4 py-5 ">
       <div class="row py-5 ">
 
-        <div class="col-lg-4 col-md-6 col-12 px-lg-4 px-md-2  bg-danger mb-md-0 mb-5 ">
+        <div class="col-lg-4 col-md-6 col-12 px-lg-4 px-md-2     mb-md-0 mb-5 ">
 
-          <div class="bg-info px-lg-5 px-md-3 px-0 text-md-start text-center boorder">
+          <div class="  px-lg-5 px-md-3 px-0 text-md-start text-center boorder">
 
             <h4 class="py-4 " style="color: black;">BASIC</h4>
             <h1 style="color:var(--Primary-color) ;">$25</h1>
             <h4 class="py-3" style="color: rgb(177, 177, 177);">PER MONTH</h4>
 
 
-            <div class="mb-4 bg-success">
+            <div class="mb-4  ">
               <p style="color: black;"> <span><i class="fa fa-check "
                     style="color:var(--Primary-color) ; font-size: 18px; padding-right: 6px;"
                     aria-hidden="true"></i></span>
@@ -386,16 +387,16 @@
 
 
         </div>
-        <div class="col-lg-4 col-md-6 col-12 px-lg-4 px-md-2  bg-danger mb-md-0 mb-5">
+        <div class="col-lg-4 col-md-6 col-12 px-lg-4 px-md-2    mb-md-0 mb-5">
 
-          <div class="bg-info px-lg-5 px-md-3 px-0 text-md-start text-center boorder">
+          <div class="  px-lg-5 px-md-3 px-0 text-md-start text-center boorder">
 
             <h4 class="py-4 " style="color: black;">ADVANCED</h4>
             <h1 style="color:var(--Primary-color) ;">$50</h1>
             <h4 class="py-3" style="color: rgb(177, 177, 177);">PER MONTH</h4>
 
 
-            <div class="mb-4 bg-success">
+            <div class="mb-4  ">
               <p style="color: black;"> <span><i class="fa fa-check "
                     style="color:var(--Primary-color) ; font-size: 18px; padding-right: 6px;"
                     aria-hidden="true"></i></span>
@@ -434,16 +435,16 @@
 
 
         </div>
-        <div class="col-lg-4 col-md-6 col-12 px-lg-4 px-md-2  bg-danger ">
+        <div class="col-lg-4 col-md-6 col-12 px-lg-4 px-md-2    ">
 
-          <div class="bg-info px-lg-5 px-md-3 px-0 text-md-start text-center boorder">
+          <div class="  px-lg-5 px-md-3 px-0 text-md-start text-center boorder">
 
             <h4 class="py-4 " style="color: black;">EXPERT</h4>
             <h1 style="color:var(--Primary-color) ;">$75</h1>
             <h4 class="py-3" style="color: rgb(177, 177, 177);">PER MONTH</h4>
 
 
-            <div class="mb-4 bg-success">
+            <div class="mb-4  ">
               <p style="color: black;"> <span><i class="fa fa-check "
                     style="color:var(--Primary-color) ; font-size: 18px; padding-right: 6px;"
                     aria-hidden="true"></i></span>
@@ -490,22 +491,22 @@
 
 
   <!--TEAM -->
-  <div class="container-fluid bg-danger " id="TEAM" style="position: relative; background-color: white; ">
+  <div class="container-fluid   " id="TEAM" style="position: relative; background-color: black; ">
     <div class="page-title-holder">
       <h4 class="text-center p-md-5 p-5" style="color: white;">
         TEAM
       </h4>
     </div>
-    <div class="container px-md-5 px-3 bg-info pt-md-0 pt-5">
+    <div class="container px-md-5 px-3   pt-md-0 pt-5">
       <div class="px-md-5 px-0 pt-md-0 pt-5">
 
         <div class="row ">
-          <div class="col-md-6 col-12 px-0 bg-success pt-md-0 pt-5 About-img">
+          <div class="col-md-6 col-12 px-0   pt-md-0 pt-5 About-img">
 
             <img src="/images/about_item_01.jpg" alt="" width="90%">
 
           </div>
-          <div class="col-md-6 col-12 px-0 bg-success ">
+          <div class="col-md-6 col-12 px-0   ">
 
             <div class="member-info w-100 text-md-start text-center p-lg-5 p-md-0 p-3">
               <div class="p-4 ">
@@ -526,7 +527,7 @@
               </div>
 
             </div>
-            <div class="col-lg-8 col-md-10 col-12 px-0 bg-success ">
+            <div class="col-lg-8 col-md-10 col-12 px-0   ">
 
               <div class="member-Social w-100">
 
@@ -558,12 +559,12 @@
         </div>
 
         <div class="row ">
-          <div class="col-md-6 col-12 px-0 bg-success About-img">
+          <div class="col-md-6 col-12 px-0   About-img">
 
             <img src="/images/about_item_02.jpg" alt="" width="90%">
 
           </div>
-          <div class="col-md-6 col-12 px-0 bg-success ">
+          <div class="col-md-6 col-12 px-0   ">
 
             <div class="member-info w-100 text-md-start text-center p-lg-5 p-md-0 p-3">
               <div class="p-4 ">
@@ -581,7 +582,7 @@
               </div>
 
             </div>
-            <div class="col-md-8 col-12 px-0 bg-success ">
+            <div class="col-md-8 col-12 px-0   ">
 
               <div class="member-Social w-100">
 
@@ -613,12 +614,12 @@
         </div>
 
         <div class="row ">
-          <div class="col-md-6 col-12 px-0 bg-success About-img">
+          <div class="col-md-6 col-12 px-0   About-img">
 
             <img src="/images/about_item_03.jpg" alt="" width="90%">
 
           </div>
-          <div class="col-md-6 col-12 px-0 bg-success ">
+          <div class="col-md-6 col-12 px-0   ">
 
             <div class="member-info w-100 text-md-start text-center p-lg-5 p-md-0 p-3">
               <div class="p-4 ">
@@ -636,7 +637,7 @@
               </div>
 
             </div>
-            <div class="col-md-8 col-12 px-0 bg-success ">
+            <div class="col-md-8 col-12 px-0   ">
 
               <div class="member-Social w-100">
 
@@ -699,9 +700,9 @@
         </div>
         <div class="col-lg-6  col-12 text-center px-md-3 px-0  ">
           <div>
-            <div class="skills-holder bg-danger">
+            <div class="skills-holder  ">
 
-              <div class="skill-holder bg-info py-4">
+              <div class="skill-holder   py-4">
                 <div class="skill-percent pt-4">75%</div>
                 <div class="skill-text">
                   <span>Creativity</span>
@@ -769,7 +770,7 @@
     <div class="container  px-md-5 px-3  ">
       <div class="row  py-5  ">
 
-        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0   ">
           <div class="d-md-flex ">
             <div class="milestone-num pb-md-0 pb-3">
               <h1>135</h1>
@@ -780,7 +781,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0   ">
           <div class="d-md-flex ">
             <div class="milestone-num pb-md-0 pb-3">
               <h1>67K</h1>
@@ -791,7 +792,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0   ">
           <div class="d-md-flex ">
             <div class="milestone-num pb-md-0 pb-3">
               <h1>74</h1>
@@ -802,7 +803,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0 bg-danger ">
+        <div class="col-lg-6  col-12 text-md-start text-center py-5 px-md-3 px-0   ">
           <div class="d-md-flex ">
             <div class="milestone-num pb-md-0 pb-3">
               <h1>389</h1>
@@ -828,7 +829,7 @@
     <div class="container  px-md-5 px-3  ">
       <div class="row row-div py-5  ">
 
-        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0  bg-danger ">
+        <div class="col-md-6 col-12 text-md-start text-center py-5 px-md-3 px-0    ">
           <p class="pb-3">
             CONTACT US
             </h1>
@@ -865,7 +866,7 @@
 
         <!-- CONTACT FORM  -->
 
-        <div class="col-md-6 col-12 text-center px-md-3 px-3 bg-info pt-3">
+        <div class="col-md-6 col-12 text-center px-md-3 px-3   pt-3">
           <div class="one_half last ">
             <div class="contact-form">
               <p>
@@ -887,7 +888,7 @@
           </div>
         </div>
         <!-- MAP -->
-        <div class="col-12 text-center bg-info py-5 px-md-0 px-3">
+        <div class="col-12 text-center   py-5 px-md-0 px-3">
           <div>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4274.290564544589!2d-75.2952832049782!3d40.753669641460846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2srs!4v1444506658649"
