--- a/index.html
+++ b/index.html
@@ -68,15 +68,13 @@
     </div>
   </nav>
 
-<a class="fa-solid fa-arrow-up upward-Arrow" href="#NAVBAR"></a>
-
 
 
   <!-- HOME -->
   <div class="container-fluid container-Background" id="HOME" style="padding: 82px 0 ;">
     <div class="container px-md-5 px-3   ">
-      <div class="row .row-div py-5  ">
-        <div class="col-12 text-md-start text-center py-5 px-md-3 px-0  ">
+      <div class="row .row-div py-5  my-2">
+        <div class="col-12 text-md-start text-center py-5 px-md-3 px-0">
           <h1 class="pb-5 text-white ">
             Technology <br>
             & Visual Agency
@@ -759,6 +757,12 @@
     </div>
   </div>
 
+
+
+
+
+
+
   <!-- MILESTONES -->
   <div class="container-fluid " id="MILESTONES"
     style="position: relative; background-color: black; padding-top: 130px;">
@@ -815,9 +819,37 @@
           </div>
         </div>
 
+
+
+
+
+
+
+
+
+
+
       </div>
     </div>
   </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <!-- CONTACT -->
   <div class="container-fluid " id="CONTACT" style="position: relative; background-color: white; padding-top: 130px;">
@@ -934,7 +966,21 @@
     </div>
   </div>
 
+  <div class="scroll-top">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 11l7-7 7 7M5 19l7-7 7 7" />
+    </svg>
+  </div>
 
+
+
+  <script>
+    const scrollButton = document.querySelector(".scroll-top");
+    scrollButton.addEventListener("click", () => {
+      window.scrollTo(0, 0);
+    });
+
+  </script>
 
 
   <script src="js/jarallax.js"></script>
