--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>Seppo</title>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -16,16 +15,10 @@
 
 <body>
 
-  <!-- <div class="doc-loader">
-    <img src="images/preloader.gif" alt="Seppo">
-  </div> -->
-
-
-  <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark sticky" id="NAVBAR" style="background-color: black; ">
     <div class="container-fluid px-4 ">
       <a class="navbar-brand" href="#">
-        <img src="/Images/logo.png" alt="..." height="50">
+        <img src="/Images/logo.png" alt="..." height="40">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +64,7 @@
 
 
   <!-- HOME -->
-  <div class="container-fluid container-Background" id="HOME" style="padding: 82px 0 ;">
+  <div class="container-fluid container-Background" id="HOME" style="padding: 85px 0 ;">
     <div class="container px-md-5 px-3   ">
       <div class="row .row-div py-5  my-2">
         <div class="col-12 text-md-start text-center py-5 px-md-3 px-0">
@@ -227,42 +220,42 @@
     </div>
     <div class="container px-md-5 px-4  ">
       <div class="row py-5  ">
-        <div class="col-lg-4 col-md-6 col-12 text-md-start text-center px-md-3 px-0  ">
+        <div class="col-lg-4 col-md-6 col-12 text-start  px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-one"></div>
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
-            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2 pb-4">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="pb-4">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
           </div>
 
         </div>
-        <div class="col-lg-4 col-md-6 col-12 text-md-start text-center px-md-3 px-0  ">
+        <div class="col-lg-4 col-md-6 col-12 text-start px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-two"></div>
             </div>
 
             <h3 class="py-3">Epochs encyclopa galactica stellar</h3>
-            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2 pb-4">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class=" pb-4">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
           </div>
 
         </div>
-        <div class="col-lg-4 col-md-6 col-12 text-md-start text-center px-md-3 px-0  ">
+        <div class="col-lg-4 col-md-6 col-12 text-start px-md-3 px-0  ">
           <div>
             <div class="Parent-Image-Hover">
               <div class="child-Image-Hover bg-three"></div>
             </div>
 
             <h3 class="py-3">How to write rogue mote of dust love</h3>
-            <p style="color:rgb(180, 180, 180)" class="px-md-0 px-2 ">How to write rogue mote of dust love
+            <p style="color:rgb(180, 180, 180)" class="">How to write rogue mote of dust love
               Bearable only through love hydrogen atoms bits of moving fluff culture shores of the cosmic ocean paroxysm
               of global
               death ...</p>
